tr(java): fix deprecated newInstance in ServiceAccessorFactory (#2591)
This refactor is part of other refactoring on Service Accessors: `java.lang.Class#newInstance()` is deprecated since java 9 and should be replaced by `java.lang.Class.getDeclaredConstructor().newInstance()`

Source: https://docs.oracle.com/javase/9/docs/api/java/lang/Class.html#newInstance--